# zipwin

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  pinact.yml  release-prepare.yml  release-publish.yml  release.yml
src/: args.rs  encoding.rs  lib.rs  main.rs  zipper.rs
