[package]
name = "zipwin"
version = "0.1.0"
edition = "2024"
authors = ["masamallow"]
description = "A CLI tool to create ZIP files without encoding issues on Windows."
license-file = "LICENSE"
repository = "https://github.com/masamallow/zipwin"
categories = ["command-line-utilities", "compression"]
keywords = ["cli", "zip", "encoding", "windows"]
publish = false

[package.metadata.release]
pre-release-hook = ["git", "cliff", "--prepend", "CHANGELOG.md", "--tag", "{{version}}", "--unreleased"]
pre-release-commit-message = "chore(release): prepare for version {{version}} release"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
encoding_rs = "0.8.35"
indicatif = "0.17.11"
walkdir = "2.5.0"
zip = "2.4.1"
